# bio_craft_foods

./: README.md
backend/: .env  Cargo.toml
backend/migrations/: 20250226163609_create_tables.down.sql  20250226163609_create_tables.up.sql
backend/src/: main.rs  main.rs~
backend/src/handlers/: #orders.rs#  customers.rs  customers.rs~  mod.rs  orders.rs  orders.rs~  products.rs  products.rs~
backend/src/models/: customer.rs~  order.rs  order.rs~  product.rs  product.rs~
backend/src/routes/: mod.rs  mod.rs~  products.rs  products.rs~
backend/src/utils/: mod.rs  validation.rs~
frontend/: package-lock.json  package.json  package.json~
frontend/public/: manifest.json
frontend/src/: App.js  App.js~  dataProvider.js  dataProvider.js~  index.js
frontend/src/resources/: customers.js  customers.js~  orders.js  products.js
