[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
base64ct = "1.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.4", features = ["fs", "cors"] }
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-native-tls", "macros", "sqlx-mysql", "rust_decimal", "mysql", "chrono"] }
dotenv = "0.15"
http = "0.2"
validator = { version = "0.20", features = ["derive"] }
rust_decimal = "1.36"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
